2017-11-17  Bruno Haible  <bruno@clisp.org>

	Revamp the installation documentation.
	* INSTALL.windows: New file, mostly borrowed from GNU gettext.
	* win32msvc/INSTALL: Mark as obsolete.
	* INSTALL: Mention INSTALL.windows.
	* DEPENDENCIES: New file.
	* HACKING: New file.

2017-11-17  Sam Steingold  <sds@gnu.org>

	Use UTF-8 for all PCRE strings.
	* modules/pcre/cpcre.c (PCRE:PCRE-COMPILE): Use UTF-8 even for
	error messages.
	(fullinfo_nametable): Use UTF-8 for pcre_fullinfo().
	(PCRE:PCRE-NAME-TO-INDEX): Use UTF-8 for pcre_get_stringnumber().

2017-11-17  Sam Steingold  <sds@gnu.org>

	* loop.lisp: Use revadd pervasively.
	Remove a spurious CASE clause.

2017-11-16  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (starts-with-p): Extract and export.

2017-11-15  Sam Steingold  <sds@gnu.org>

	Improve loop error reporting.
	* loop.lisp (loop-syntax-error): Accept an optional location
	argument (nil means end of form).
	(expand-loop): Pass location to `loop-syntax-error'.

2017-11-15  Sam Steingold  <sds@gnu.org>

	Fix bug#711: do in loop allows more expressions than the standard.
	* loop.lisp (expand-loop parse-progn): Check that all forms in
	implicit PROGNs are compound as implied by CLHS.

2017-11-14  Sam Steingold  <sds@gnu.org>

	Make it easier for users to customize completion.
	* complete.lisp (ext:longest-common-prefix): Extract from completion.
	(completion): Use it.
	(*completion*): Set to #'completion.
	(ext:make-completion): New function for users.
	* init.lisp (*completion*): Export from CUSTOM.
	(make-completion, longest-common-prefix): Export from EXT.
	* constsym.d: Replace COMPLETION with *COMPLETION*.
	* spvw.d (init_symbol_values): Define *COMPLETION*.
	* stream.d (lisp_completion): Use *COMPLETION* instead of COMPLETION.

2017-11-12  Bruno Haible  <bruno@clisp.org>

	Fix "Warning: reserving address range" on some Linux/x86_64 systems.
	Reported by Sam Steingold at https://sourceforge.net/p/clisp/bugs/703/.